deployment/config/istio/auth_upgrade.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auth-destination
spec:
  host: auth
  subsets:
  - name: v1
    labels:
      version: v1.1
  - name: v2
    labels:
      version: v2.0
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-rule
spec:
  hosts:
    - "auth"
  http:
  - route:
    - destination:
        host: auth
        subset: v1
      weight: 75
    - destination:
        host: auth
        subset: v2
      weight: 25
