deployment/config/istio/blob_rule.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: blob-rule
spec:
  hosts:
    - "blob"
  http:
  - fault:
      delay:
        percentage:
          value: 50.0
        fixedDelay: 5s
      abort:
        percentage:
          value: 50
        httpStatus: 500
    route:
    - destination:
        host: blob
