deployment/config/istio/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: coolcar-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: coolcar-gateway
spec:
  hosts:
  - "*"
  gateways:
  - coolcar-gateway
  http:
  - match:
    - uri:
        prefix: "/ws"
    route:
    - destination:
        port:
          number: 8080
        host: car
  - route:
    - destination:
        port:
          number: 8080
        host: gateway
