deployment/config/istio/srventry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: wechat
spec:
  hosts:
  - api.weixin.qq.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: cos
spec:
  hosts:
  - coolcar-1258036068.cos.ap-shanghai.myqcloud.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
